corpus/text_mode.txt
==================
Plain text
==================
fubar
---

(document
  (text_mode
    (text)))

==================
Single command
==================
fubar\quux wibble
---

(document
  (text_mode
    (text)
    (command (token))
    (text)))

==================
Single command with arguments
==================
fubar\quux[opt]{bar} wibble
---

(document
  (text_mode
    (text)
    (command (token))
    (opt_text_group (begin_opt) (text) (end_opt))
    (text_group (text))
    (text)))

=============
Active char
=============
foo~bar
-------------
(document
  (text_mode
    (text)
    (active_char)
    (text)))

=============
Alignment tab
=============
foo&bar
-------------
(document
  (text_mode
    (text)
    (alignment_tab)
    (text)))

=============
Parameter
=============
foo#1bar
-------------
(document
  (text_mode
    (text)
    (parameter
      (parameter_char)
      (number))
    (text)))

=============
Subscript
=============
foo_bar
-------------
(document
  (text_mode
    (text)
    (text)
    (text)))

=============
Escaped
=============
foo\^bar
-------------
(document
  (text_mode
    (text)
    (escaped)
    (text)))

=============
Text group
=============
foo{bar}wibble
-------------
(document
  (text_mode
    (text)
    (text_group

      (text)
     )
    (text)))

=============
Optional Text group
=============
foo[bar]wibble
-------------
(document
  (text_mode
    (text)
    (opt_text_group
      (begin_opt)
      (text)
      (end_opt))
    (text)))

=============
text environment
=============
foo
\begin{wibble}
bar
\end{wibble}
quux
-------------
(document
  (text_mode
    (text)
    (text_env
      (begin (begin_token) (env_name (text)))
      (text)
      (end (end_token) (env_name (text))))
  (text)))

===========
comment
===========
foo % bar
-----------
(document
  (text_mode (text))
  (comment))

===========
magic comment
===========
foo %!TeX bar=wibble
-----------
(document
  (text_mode (text))
  (magic_comment))

=============
documentclass
=============
\documentclass[foo]{bar}
----------------
(document
  (text_mode
    (command
      (documentclass
        (documentclass_token)
        (opt_text_group (begin_opt) (text) (end_opt))
        (class_name (text))))))

======================
usepackage
======================
\usepackage[foo]{bar}
-------------------
(document
  (text_mode
    (command
    (usepackage
      (usepackage_token)
      (opt_text_group (begin_opt) (text) (end_opt))
      (package_name (text))))))

=====================
emph
=====================
foo\emph{bar}wibble
---------------------
(document
  (text_mode
    (text)
    (command (emph (emph_token) (text_group (text))))
    (text)))

=====================
textbf
=====================
foo\textbf{bar}wibble
---------------------
(document
  (text_mode
    (text)
    (command (textbf (textbf_token) (text_group (text))))
    (text)))

=====================
textit
=====================
foo\textit{bar}wibble
---------------------
(document
  (text_mode
    (text)
    (command (textit (textit_token) (text_group (text))))
    (text)))

=====================
texttt
=====================
foo\texttt{bar}wibble
---------------------
(document
  (text_mode
    (text)
    (command (texttt (texttt_token) (text_group (text))))
    (text)))
