corpus/verbatim.txt
======================
verbatim environment
======================
foo
\begin{verbatim}
bar
\end{verbatim}
quux
----------------------
(document
  (text_mode
    (text)
    (verbatim_env
      (verbatim_begin (begin_token) (verbatim_env_group (verbatim_env_name)))
      (verbatim_text)
      (verbatim_end (end_token) (verbatim_env_group (verbatim_env_name))))
    (text)))

===========================
Verbatim environment
===========================
foo
\begin{Verbatim}
bar
\end{Verbatim}
quux
---------------------------
(document
  (text_mode
    (text)
    (verbatim_env
      (verbatim_begin (begin_token) (verbatim_env_group (verbatim_env_name)))
      (verbatim_text)
      (verbatim_end (end_token) (verbatim_env_group (verbatim_env_name))))
    (text)))

===========================
Verbatim star environment
===========================
foo
\begin{Verbatim*}
bar
\end{Verbatim*}
quux
---------------------------
(document
  (text_mode
    (text)
    (verbatim_env
      (verbatim_begin (begin_token) (verbatim_env_group (verbatim_env_name)))
      (verbatim_text)
      (verbatim_end (end_token) (verbatim_env_group (verbatim_env_name))))
    (text)))

===========================
BVerbatim environment
===========================
foo
\begin{BVerbatim}
bar
\end{BVerbatim}
quux
---------------------------
(document
  (text_mode
    (text)
    (verbatim_env
      (verbatim_begin (begin_token) (verbatim_env_group (verbatim_env_name)))
      (verbatim_text)
      (verbatim_end (end_token) (verbatim_env_group (verbatim_env_name))))
    (text)))

===========================
BVerbatim star environment
===========================
foo
\begin{BVerbatim*}
bar
\end{BVerbatim*}
quux
---------------------------
(document
  (text_mode
    (text)
    (verbatim_env
      (verbatim_begin (begin_token) (verbatim_env_group (verbatim_env_name)))
      (verbatim_text)
      (verbatim_end (end_token) (verbatim_env_group (verbatim_env_name))))
    (text)))

===========================
LVerbatim environment
===========================
foo
\begin{LVerbatim}
bar
\end{LVerbatim}
quux
---------------------------
(document
  (text_mode
    (text)
    (verbatim_env
      (verbatim_begin (begin_token) (verbatim_env_group (verbatim_env_name)))
      (verbatim_text)
      (verbatim_end (end_token) (verbatim_env_group (verbatim_env_name))))
    (text)))

===========================
LVerbatim star environment
===========================
foo
\begin{LVerbatim*}
bar
\end{LVerbatim*}
quux
---------------------------
(document
  (text_mode
    (text)
    (verbatim_env
      (verbatim_begin (begin_token) (verbatim_env_group (verbatim_env_name)))
      (verbatim_text)
      (verbatim_end (end_token) (verbatim_env_group (verbatim_env_name))))
    (text)))

===========================
lstlisting environment
===========================
foo
\begin{lstlisting}
bar
\end{lstlisting}
quux
---------------------------
(document
  (text_mode
    (text)
    (verbatim_env
      (verbatim_begin (begin_token) (verbatim_env_group (verbatim_env_name)))
      (verbatim_text)
      (verbatim_end (end_token) (verbatim_env_group (verbatim_env_name))))
    (text)))

===========================
lstlisting environment with optional argument
===========================
foo
\begin{lstlisting}[wibble]
bar
\end{lstlisting}
quux
---------------------------
(document
  (text_mode
    (text)
    (verbatim_env
      (verbatim_begin
        (begin_token)
        (verbatim_env_group (verbatim_env_name))
        (opt_text_group (begin_opt) (text) (end_opt)))
      (verbatim_text)
      (verbatim_end (end_token) (verbatim_env_group (verbatim_env_name))))
    (text)))

===========================
minted environment
===========================
foo
\begin{minted}{wibble}
bar
\end{minted}
quux
---------------------------
(document
  (text_mode
    (text)
    (verbatim_env
      (verbatim_begin
        (begin_token)
        (verbatim_env_group (verbatim_env_name))
        (text_group (text)))
      (verbatim_text)
      (verbatim_end (end_token) (verbatim_env_group (verbatim_env_name))))
    (text)))

======================
empty verbatim environment
======================
foo
\begin{verbatim}
\end{verbatim}
quux
----------------------
(document
  (text_mode
    (text)
    (verbatim_env
      (verbatim_begin (begin_token) (verbatim_env_group (verbatim_env_name)))
      (verbatim_end (end_token) (verbatim_env_group (verbatim_env_name))))
    (text)))

======================
multiline verbatim environment
======================
foo
\begin{verbatim}
bar
wibble
\end{verbatim}
quux
----------------------
(document
  (text_mode
    (text)
    (verbatim_env
      (verbatim_begin (begin_token) (verbatim_env_group (verbatim_env_name)))
      (verbatim_text)
      (verbatim_end (end_token) (verbatim_env_group (verbatim_env_name))))
    (text)))
